--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.mcxiaoke.volley:library:1.0.17'
+    //implementation 'com.android.volley:volley:1.1.0'
 }
